# pixel-prompt-complete

./: .gitignore  .mailmap  .markdownlint.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEBUGGING_ENHANCE.md  DEPLOYMENT_WORKFLOW.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  refactor-monorepo.sh
.claude/: skill-runs.json
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT_SECRETS.md  PRODUCTION_DEPLOYMENT.md  PULL_REQUEST_TEMPLATE.md  (+2 more)
backend/: .env.deploy.example  .env.example  .gitignore  DEPLOYMENT.md  README.md  SECRETS_MANAGER_GUIDE.md  TESTING.md  package.json  parameters.example.json  pyproject.toml  requirements-lock.txt  requirements.txt  samconfig.toml  template.yaml  template.yaml.backup
backend/scripts/: deploy.js
backend/src/: config.py  lambda_function.py  requirements.txt
backend/src/admin/: auth.py  metrics.py  models.py  users.py
backend/src/api/: __init__.py  enhance.py  log.py
backend/src/auth/: claims.py  guest_token.py
backend/src/billing/: __init__.py  checkout.py  portal.py  stripe_client.py  webhook.py
backend/src/jobs/: __init__.py  executor.py  manager.py
backend/src/models/: __init__.py  context.py  handlers.py  handlers.py.backup  registry.py  types.py
backend/src/models/providers/: __init__.py  _common.py  firefly.py  gemini.py  nova.py  openai_provider.py
backend/src/notifications/: sender.py  ses_client.py  templates.py
backend/src/ops/: captcha.py  metrics.py  model_counters.py
backend/src/prompts/: repository.py
backend/src/users/: quota.py  repository.py  tier.py
backend/src/utils/: __init__.py  clients.py  content_filter.py  error_responses.py  logger.py  outpaint.py  rate_limit.py  retry.py  storage.py
backend/tests/: README.md  requirements.txt
backend/tests/integration/: test_api_endpoints.py  test_correlation_ids.py
backend/tests/unit/: conftest.py  test_content_filter.py  test_enhance.py  test_handlers.py  test_job_manager.py  test_log_endpoint.py  test_rate_limit.py  test_registry.py  test_retry.py  test_storage.py
(+436 files in other folders)
