[project]
name = "pixel-prompt-backend"
version = "2.0.0"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",  # Python 3.13 support added in 1.13.0
    "ruff>=0.8.0",   # Python 3.13 support
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "moto>=5.0.0",
    "requests-mock>=1.12.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
strict_optional = true

# Gradual typing - start permissive, tighten over time
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "google.*",
    "boto3.*",
    "botocore.*",
    "openai.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long - handled by formatter
