[project]
name = "pixel-prompt-backend"
version = "2.0.0"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "mypy==1.20.0",
    "ruff==0.15.9",
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
    "moto==5.1.22",
    "requests-mock==1.12.1",
    "responses==0.26.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
strict_optional = true

# Strict typing for new code (Phase 1 hardening)
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "google.*",
    "boto3.*",
    "botocore.*",
    "openai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "e2e: E2E tests requiring MiniStack",
    "slow: slow tests (deselect with -m 'not slow')",
]

[tool.coverage.run]
source = ["."]
omit = ["**/tests/**"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long - handled by formatter
